Clearer visibility